# GetCodingSeqs

./: README.md  pyproject.toml
.github/workflows/: build.yml
data/: df.gb
gcs/: fileloader.py  launcher.py  main.py  saver.py
